<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/kirolari_inicial_fons">
    
    <ImageView
		android:id="@+id/signin_animacio"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:contentDescription="@string/cuidam_descripcioImatge"
		android:src="@anim/animacio_signin" />

    <Button
        android:id="@+id/button_entrar"
        android:background="@drawable/button_black"
        style="@style/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_registrar"
        android:layout_alignLeft="@+id/editText_Contrasenya"
        android:layout_alignRight="@+id/editText_Contrasenya"
        android:text="@string/boto_entrar" />
    
    <Button
        android:id="@id/button_registrar"
        style="@style/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/editText_Contrasenya"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/text_olvidarContrasenya"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_black"
        android:text="@string/boto_registrar" />

    <TextView
        android:id="@+id/text_olvidarContrasenya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_entrar"
        android:layout_alignRight="@id/editText_Contrasenya"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:text="@string/text_olvidarContrasenya" />

    <EditText
        android:id="@+id/editText_Usuari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/editText_Contrasenya"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/text_usuari"
        android:inputType="textEmailAddress" />


    <EditText
        android:id="@id/editText_Contrasenya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_olvidarContrasenya"
        android:layout_alignLeft="@id/editText_Usuari"
        android:layout_alignRight="@id/editText_Usuari"
        android:hint="@string/text_contrasenya"
        android:inputType="textPassword" />

</RelativeLayout>